Multiple sources and JUnit support